[build-system]
requires = ["setuptools>=75.6.0", "setuptools_scm[toml]>=5.0"]
build-backend = "setuptools.build_meta"

[project]
name = "eip712"
description = "eip712: Message classes for typed structured data hashing and signing in Ethereum"
readme = "README.md"
authors = [{ name = "ApeWorX Ltd.", email = "admin@apeworx.io" }]
license = { text = "Apache-2.0" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: MacOS",
    "Operating System :: POSIX",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
requires-python = ">=3.10,<4"
dependencies = [
    "dataclassy>=0.11.1,<1",
    "eth-abi>=5.1.0,<6",
    "eth-account>=0.11.3,<0.14",
    "eth-typing>=3.5.2,<6",
    "eth-utils>=2.3.1,<6",
    "hexbytes>=0.3.1,<2",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/ApeWorX/eip712"

[project.dependency-groups]
test = [
    "pytest>=6.0",
    "pytest-xdist",
    "pytest-cov",
    "hypothesis>=6.70.0,<7",
]
lint = [
    "ruff==0.6.2",
    "black>=24.10.0,<25",
    "mypy>=1.13.0,<2",
    "types-setuptools",
    "isort>=5.13.2,<6",
    "mdformat>=0.7.19",
    "mdformat-gfm>=0.3.5",
    "mdformat-frontmatter>=0.4.1",
    "mdformat-pyproject>=0.0.2",
]
doc = [
    "sphinx-ape",
]
dev = [
    "commitizen>=2.42,<3",
    "pre-commit",
    "pytest-watch",
    "IPython",
    "ipdb",
]

[tool.setuptools]
include-package-data = true
packages = ["eip712"]

[tool.setuptools.package-data]
eip712 = ["py.typed"]

[tool.setuptools_scm]
write_to = "eip712/version.py"

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312', 'py313', 'py314']
include = '\.pyi?$'

[tool.pytest.ini_options]
addopts = """
    --cov-branch
    --cov-report term
    --cov-report html
    --cov-report xml
    --cov=eip712
"""
python_files = "test_*.py"
testpaths = "tests"
markers = "fuzzing: Run Hypothesis fuzz test suite"

[tool.isort]
line_length = 100
force_grid_wrap = 0
include_trailing_comma = true
multi_line_output = 3
use_parentheses = true
skip = ["version.py"]

[tool.mdformat]
number = true

[tool.ruff]
line-length = 100
extend-exclude = ["docs", "build", ".eggs", "venv"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4"]
ignore = ["E501"]
per-file-ignores = { "tests/conftest.py" = ["F821"] }

[tool.mypy]
exclude = ["build/", "dist/", "docs/"]
